# streaming-file-server

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  curl_chunked_upload.sh  curl_download.sh  debug_run.py  docker-compose.yml  download_file.py  project_structure  pyproject.toml  requirements.txt  run_server.py  test_chunked_upload.py  test_file.txt  test_server.py  test_upload.py  test_upload.sh
api/: files.py
app/: __init__.py  config.py
app/api/: routes.py
app/core/: file_service.py  security.py
app/utils/: helpers.py
tests/: conftest.py  test_file_operations.py  test_files.py
