[tool.poetry]
name = "streaming-file-server"
version = "0.1.0"
description = "A Flask-based streaming file server with support for large files"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
python-dotenv = "^1.0.0"
flask-cors = "^4.0.0"
flask-limiter = "^3.5.0"
pydantic = "^2.0.0"
flask-swagger-ui = "^4.11.1"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi-line-output = 3 